<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_marginBaseline="16dp"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="253dp"
        android:layout_height="33dp"
        android:text="@string/txt_titulo"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/edit_primeiro_nome"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_primeiro_nome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo"
        app:layout_marginBaseline="16dp" />

    <EditText
        android:id="@+id/edit_sobrenome"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_sobrenome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo"
        app:layout_marginBaseline="16dp" />

    <EditText
        android:id="@+id/edit_Tel_Contato"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="244dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_Tel_Contato"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo"
        app:layout_marginBaseline="16dp" />

    <EditText
        android:id="@+id/edit_nome_curso"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="164dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_nome_curso"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo"
        app:layout_marginBaseline="16dp" />

    <Button
        android:id="@+id/btn_salvar"
        android:layout_width="155dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#2b3b4b"
        android:text="@string/txt_button_salvar"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_Tel_Contato"
        app:layout_constraintVertical_bias="0.349" />

    <Button
        android:id="@+id/button3"
        android:layout_width="375dp"
        android:layout_height="55dp"
        android:width="370dp"
        android:backgroundTint="#2b3b4c"
        android:text="@string/txt_button_finalizar"
        android:textColor="#fcfcfc"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_Tel_Contato"
        app:layout_constraintVertical_bias="0.677" />

    <Button
        android:id="@+id/button1"
        android:layout_width="155dp"
        android:layout_height="64dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#2b3b4b"
        android:text="@string/txt_button_limpar"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/btn_salvar"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_Tel_Contato"
        app:layout_constraintVertical_bias="0.349" />

</androidx.constraintlayout.widget.ConstraintLayout>